Fix line-height of abstract lang
This fix a display bug on IE where the second line of the abstract is not aligned because of
the language code line height.

ref #2072

--- a/eruditorg/static/sass/components/_bibliographic-records.scss
+++ b/eruditorg/static/sass/components/_bibliographic-records.scss
@@ -99,6 +99,7 @@
       float: left;
       margin-right: 0.25em;
       margin-bottom: 0;
+      line-height: 1.25em;
     }
   }
 
